:bug: fix misaligned headers w/ fixed_columns
fix https://gitlab.hevaweb.com/data_science/missions/artemis-design/-/issues/13

--- a/src/styles/components/_table.styl
+++ b/src/styles/components/_table.styl
@@ -39,9 +39,10 @@
       border none !important
       padding 0.4rem
       background-color $white
-      line-height 3.2rem
+      height 4rem
 
       div
+        line-height 3.2rem
         background-color $headerBackgroundColor
         border-radius 4px
         padding 0 1.2rem
@@ -75,7 +76,6 @@
       padding 0 0.4rem
 
   .previous-next-container
-    height 3.2rem
     margin-top 1rem
     display flex
     justify-content flex-start
